test/error/ast/ConstDeclExprNotConst.mod
MODULE ConstDeclExprNotConst;
VAR x: INTEGER;
CONST c = x;
END ConstDeclExprNotConst.
